data/derived/fa15/progs/unify/prog2211.ml.out
Characters 109-110:
  | Sine t       -> sin(pi*. eval t x y)
                                  ^
Error: This expression has type expr but an expression was expected of type
         expr * ('a -> 'b -> 'c) * ('a -> 'b -> 'c)
